[package]
name = "stitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.30.5"
dotenv = "0.15.0"
cen = { git = "https://github.com/n-e-l/cen", rev = "dadf4c46361a38bd9c0c26d87b31f1d168cff213" }
ash = "0.38.0"
egui = "0.32.0"
egui_dock = "0.17"
bytemuck = "1.21.0"
vsvg = { git = "https://github.com/n-e-l/vsvg" }
