[package]
name = "stitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.30.5"
kurbo = "=0.11.0"
dotenv = "0.15.0"
cen = { git = "https://github.com/n-e-l/cen", rev = "92ba9b602ab86933698d7545d80852c74b263d2c" }
ash = "0.38.0"
egui = "0.32.0"
egui_dock = "0.17"
bytemuck = "1.21.0"
vsvg = "0.5.0"
